log
Thu, Mar 20, 2025  6:36:35 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  8:58:23 PM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
       push_back(L, elem);
       ^~~~~~~~~
exercises.c: In function 'copia_pila':
exercises.c:107:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '}' token
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
80747b4
Thu, Mar 20, 2025 10:06:38 PM: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:104:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux = create_stack();
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
80c92d7
Thu, Mar 20, 2025 10:09:05 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:104:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux = create_stack();
           ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
7925e8f
Thu, Mar 20, 2025 10:35:09 PM: 
 exercises.c | 20 ++++++++++++++++----
 1 file changed, 16 insertions(+), 4 deletions(-)
 tests:  3|2
total_score: 30/70
e9f0413
Thu, Mar 20, 2025 10:42:11 PM: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|2
total_score: 30/70
5d26f89
Thu, Mar 20, 2025 10:48:53 PM: 
 exercises.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:127:4: error: unknown type name 'stack'
    stack
    ^~~~~
exercises.c:128:12: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
    *pila = create_stack();
            ^~~~~~~~~~~~
exercises.c:134:15: error: passing argument 1 of 'push' from incompatible pointer type [-Werror=incompatible-pointer-types]
          push(pila, &cadena[i]);
               ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:138:18: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
          if (top(pila) == NULL)
                  ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *top(Stack *stack) { return first(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:142:14: error: passing argument 1 of 'pop' from incompatible pointer type [-Werror=incompatible-pointer-types]
          pop(pila);
              ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:17:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *pop(Stack *stack) { return popFront(stack); }
       ^~~
In file included from test.c:5:0:
exercises.c:146:12: error: passing argument 1 of 'top' from incompatible pointer type [-Werror=incompatible-pointer-types]
    if (top(pila) == NULL)
            ^~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:14:7: note: expected 'Stack * {aka struct List *}' but argument is of type 'int *'
 void *top(Stack *stack) { return first(stack); }
       ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
4d3e44a
Thu, Mar 20, 2025 10:52:41 PM: 
 exercises.c | 25 +------------------------
 1 file changed, 1 insertion(+), 24 deletions(-)
 tests:  4|1
total_score: 50/70
ed0264d
Thu, Mar 20, 2025 10:56:26 PM: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
34d596f
Thu, Mar 20, 2025 10:59:41 PM: 
 exercises.c | 32 --------------------------------
 1 file changed, 32 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:128:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
2c197ca
Fri, Mar 21, 2025 12:01:16 PM: 
 exercises.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
a77c4cc
Fri, Mar 21, 2025  9:23:32 PM: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:129:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
09af755
Fri, Mar 21, 2025  9:27:59 PM: 
 exercises.c | 15 +--------------
 1 file changed, 1 insertion(+), 14 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'copia_pila':
exercises.c:101:11: error: unused variable 'pilaAux' [-Werror=unused-variable]
    Stack* pilaAux = create_stack();
           ^~~~~~~
exercises.c: In function 'parentesisBalanceados':
exercises.c:116:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
567c894
Fri, Mar 21, 2025  9:33:19 PM: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:129:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
51b6eb9
Fri, Mar 21, 2025  9:36:03 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f5bec3
Fri, Mar 21, 2025  9:53:21 PM: 
 exercises.c | 24 ------------------------
 1 file changed, 24 deletions(-)
 tests:  0|0
8985e03
Fri, Mar 21, 2025  9:57:33 PM: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:129:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
bbce5b9
Fri, Mar 21, 2025 10:05:37 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
664e34d
 tests:  0|0
556858e
Fri, Mar 21, 2025 10:12:41 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file a.out: Permission denied
collect2.exe: error: ld returned 1 exit status
Compilation failed
3fd37af
 tests:  0|0
22f7f59
